# ppmnumerics

./: Makefile  Makefile.in  README  README.html  aclocal.m4  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: ppm_numerics_log.rtf
m4/: ax_f90_library.m4  ax_f90_library_setup.m4
objects/: __ppm_module_fdsolver_init.f  ppm_module_bem.d  ppm_module_bem_basis.d  ppm_module_bem_quadrule.d  ppm_module_bem_quadrule_npoints.d  ppm_module_data.d  ppm_module_data_fieldsolver.d  ppm_module_data_fmm.d  ppm_module_data_gmm.d  ppm_module_data_mesh.d  ppm_module_data_mg.d  ppm_module_data_ode.d  ppm_module_fdsolver_fft_bd.d  ppm_module_fdsolver_fft_fd.d  ppm_module_fdsolver_finalize.d  ppm_module_fdsolver_init.d  ppm_module_fdsolver_map.d  ppm_module_fdsolver_poisson.d  ppm_module_fdsolver_solve.d  ppm_module_fieldsolver.d  ppm_module_fmm.d  ppm_module_fmm_expansion.d  ppm_module_fmm_expchange.d  ppm_module_fmm_finalize.d  ppm_module_fmm_init.d  ppm_module_fmm_potential.d  ppm_module_fmm_pretraverse.d  ppm_module_fmm_traverse.d  ppm_module_gmm.d  ppm_module_gmm_cpt.d  ppm_module_gmm_extend.d  ppm_module_gmm_extend_bkwd.d  ppm_module_gmm_extend_fwd.d  ppm_module_gmm_finalize.d  ppm_module_gmm_init.d  ppm_module_gmm_kickoff.d  ppm_module_gmm_march.d  ppm_module_gmm_march_bkwd.d  ppm_module_gmm_march_fwd.d  ppm_module_gmm_reinitialize.d  (+26 more)
src/: ppm_bem_basis.f  ppm_bem_quadrule.f  ppm_bem_quadrule_npoints.f  ppm_comp_pp_cell.f  ppm_comp_pp_correct.f  ppm_comp_pp_doring.f  ppm_comp_pp_kernels.inc  ppm_comp_pp_mk_table.f  ppm_comp_pp_ring.f  ppm_comp_pp_verlet.f  ppm_define.h  ppm_fdsolver_fft_bd_2d.f  ppm_fdsolver_fft_bd_3d.f  ppm_fdsolver_fft_fd_2d.f  ppm_fdsolver_fft_fd_3d.f  ppm_fdsolver_finalize.f  ppm_fdsolver_init.f  ppm_fdsolver_map_2d.f  ppm_fdsolver_map_3d.f  ppm_fdsolver_poisson_2d.f  ppm_fdsolver_poisson_3d.f  ppm_fdsolver_solve_2d.f  ppm_fdsolver_solve_3d.f  ppm_fmm_expansion.f  ppm_fmm_expchange.f  ppm_fmm_finalize.f  ppm_fmm_init.f  ppm_fmm_potential.f  ppm_fmm_pretraverse.f  ppm_fmm_traverse.f  ppm_gmm_cpt.f  ppm_gmm_extend.f  ppm_gmm_extend_bkwd.f  ppm_gmm_extend_fwd.f  ppm_gmm_finalize.f  ppm_gmm_init.f  ppm_gmm_kickoff.f  ppm_gmm_march.f  ppm_gmm_march_bkwd.f  ppm_gmm_march_fwd.f  (+119 more)
src/fft/: ppm_fft_exec_3d_vec_bc2r_xy.f  ppm_fft_exec_3d_vec_bc2r_xy.f90  ppm_fft_exec_3d_vec_c2c_z.f  ppm_fft_exec_3d_vec_c2c_z.f90  ppm_fft_exec_3d_vec_fr2c_xy.f  ppm_fft_normalize_c.f  ppm_fft_normalize_c.f90  ppm_fft_normalize_r.f  ppm_fft_normalize_r.f90  ppm_fft_plan_3d_vec_bc2c_z.f  ppm_fft_plan_3d_vec_bc2c_z.f90  ppm_fft_plan_3d_vec_bc2r_xy.f  ppm_fft_plan_3d_vec_bc2r_xy.f90  ppm_fft_plan_3d_vec_fc2c_z.f  ppm_fft_plan_3d_vec_fc2c_z.f90  ppm_fft_plan_3d_vec_fr2c_xy.f  ppm_fft_plan_3d_vec_fr2c_xy.f90
src/integrator/: integrator_interfaces.f  integrator_typedef.f  integrator_typeproc.f
src/macros/: ode_update.mac
src/mg/: ppm_mg_alloc_bc.f  ppm_mg_alloc_field.f  ppm_mg_core.f  ppm_mg_finalize.f  ppm_mg_init.f  ppm_mg_prolong.f  ppm_mg_res_coarse.f  ppm_mg_res_fine.f  ppm_mg_restrict.f  ppm_mg_smooth_coarse.f  ppm_mg_smooth_fine.f  ppm_mg_solv.f
src/ode/: integrator_interfaces.f  ode_interfaces.f  ode_typedef.f  ode_typeproc.f  ppm_ode_alldone.f  ppm_ode_create_ode.f  ppm_ode_finalize.f  ppm_ode_init.f  ppm_ode_map_pop.f  ppm_ode_map_push.f  ppm_ode_start.f  ppm_ode_step.f
src/ode/old/: ppm_ode_alldone.f  ppm_ode_create_ode.f  ppm_ode_finalize.f  ppm_ode_init.f  ppm_ode_map_pop.f  ppm_ode_map_push.f  ppm_ode_modalloc.h  ppm_ode_rhsfunc_macro.h  ppm_ode_start.f  ppm_ode_step.f
src/ode/test/: ppm_module_ode_typedef.fun
src/old/: ppm_module_data_ode.f
src/poisson/: ppm_poisson_extrapolateghost.f  ppm_poisson_fd.f  ppm_poisson_fd.f90  ppm_poisson_init.f  ppm_poisson_init_predef.f  ppm_poisson_init_predef.f90  ppm_poisson_solve.f  ppm_poisson_solve.f90
src/template/: ppm_template_comp_pp_cell.f
src/util/: ppm_util_fft_backward_2d.f  ppm_util_fft_backward_3d.f  ppm_util_fft_forward_2d.f  ppm_util_fft_forward_3d.f  ppm_util_gmres.f  ppm_util_gmres_solveupper.f
